2 files modified, 1 added

--- a/src/style.less
+++ b/src/style.less
@@ -8,6 +8,12 @@ ul {
   padding-left: 30px;
 }
 
+.wrapper {
+  padding: 10px;
+  border: 1px solid lightgray;
+  box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
+}
+
 .name-form {
   margin-bottom: 30px;
   display: flex;
@@ -72,6 +78,7 @@ ul {
 .game {
   display: flex;
   flex-direction: row;
+  max-width: 300px;
 
   &-info {
     margin-left: 20px;
